--- a/package.json
+++ b/package.json
@@ -2,18 +2,15 @@
   "name": "string-calculator",
   "scripts": {
     "start": "babel-node ./src/main.js",
-    "test": "mocha"
+    "test": "jest"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.34",
-    "@babel/node": "^7.0.0-beta.34",
+    "@babel/core": "^7.9.0",
+    "@babel/node": "^7.8.7",
     "@babel/preset-env": "^7.0.0-beta.34",
-    "@babel/register": "^7.0.0-beta.34",
-    "chai": "^4.1.2",
-    "chai-autoload-plugins": "^0.1.0",
+    "@babel/register": "^7.9.0",
+    "babel-jest": "^25.1.0",
     "chance": "^1.0.12",
-    "mocha": "^4.0.1",
-    "sinon": "^4.1.3",
-    "sinon-chai": "^2.14.0"
+    "jest": "^25.1.0"
   }
 }
